...
    func didTapExitButton() {
        showAlertForExit()
    }
    
    private func showAlertForExit() {
        let alert = UIAlertController(
            title: "Пока, пока!",
            message: "Уверены, что хотите выйти?",
            preferredStyle: .alert
        )
        
        let yesButton = UIAlertAction(title: "Да", style: .default) {
            [weak self] _ in
            self?.performLogout()
        }
        
        let noButton = UIAlertAction(
            title: "Нет", style: .default, handler: nil)
...
