...
                                    <constraint firstAttribute="width" constant="60" id="v4P-y0-eJF"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jsy-Pu-fXb" userLabel="Войти">
                                <rect key="frame" x="16" y="758" width="382" height="48"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="Auth"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="WYV-0B-c3y"/>
                                </constraints>
                                <color key="tintColor" name="YP Black"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти">
...
                                </subviews>
                                <viewLayoutGuide key="contentLayoutGuide" id="2IQ-Oi-hYq"/>
                                <viewLayoutGuide key="frameLayoutGuide" id="lH4-Fd-toH"/>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B5l-P1-nX1" userLabel="Back Button">
                                <rect key="frame" x="8" y="8" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="nav back button"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="9hc-4V-gEm"/>
                                    <constraint firstAttribute="width" constant="48" id="raT-Vl-zrP"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="nav_back_button_white"/>
...
